Added links to top and bottom of page

--- a/index.html
+++ b/index.html
@@ -3,24 +3,47 @@
 <html>
     <head>
         <title>Watercolor Life</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="normalizesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
+        <header>
+            <a name="toTop"></a>
         <h1>Watercolor is my Therapy</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#firstThings">First Things First</a>
+                </li>
+                <li>
+                    <a href="#branching">Branching Out</a>
+                </li>
+                <li>
+                    <a href="#whatYouNeed">What You Need to Get your Paint On</a>
+                </li>
+                <li>
+                    <a href="#parting">Parting Words &#38 Wisdom</a>
+                </li>
+            </ul>
+        </nav>
+        </header>
         <main>
         <article>
+            <a name="firstThings"></a>
         <h2>First Things First</h2>
         <p>I received a watercolor paint set for Christmas in 2019 from my Mother-in-Law. I had never used the medium before and my previous painting experience was Painting with a Twist. I felt bad leaving it unused, so I opened it up, pulled up a Youtube tutorial, and got to work. I absolutely loved it!</p>
         <figure>
             <img src="Images/20200105_164639.jpg" alt="My First Attempt!" width="520" height="400">
-            <figcaption>Not bad for my first try! These are hanging in my brother's home!</figcaption>
+            <figcaption id="figureCaption">Not bad for my first try! These are hanging in my brother's home!</figcaption>
         </figure>
+        <a name="branching"></a>
         <h2>Branching Out</h2>
         <h3>Youtube for Good!</h3>
         <p>I typically avoid all things Youtube. If I don't, I get sucked in for hours and the next thing I know, I've watched 2 hours of makeup tutorials and 3 hours of kids meeting characters at Disney World. I quickly realized that when it came to watercolor, Youtube was going to be my friend. With something so hands on, it really did help to go step by step with someone else. My favorite channel is <a href="https://www.youtube.com/channel/UCzzCo7lZGJ-sTCgpI7BJKEg">Let's Make Art</a>. They put out a new project every week and even have a monthly subscription box that sends you all the supplies you'll need for that months projects. With that being said...</p>
         <h3>Let's Make Art Subscription Box</h3>
         <p>After finding <a href="https://www.youtube.com/channel/UCzzCo7lZGJ-sTCgpI7BJKEg">Let's Make Art</a> on Youtube, I was super anxious to sign up for their <a href="https://www.letsmakeart.com/products/monthly-subscription-box">monthly subscription box</a>. Especially starting out, I wasn't sure what I wanted to paint and had a difficult time coming up with ideas. So the box was great! They have a new painting every week and send you all the supplies you need. You just provide the water!</p>
-        <p>Here are some of their projects that I completed:</p>
+        <p id="here">Here are some of their projects that I completed:</p>
         <div class="row">
             <div class="column">
                 <img src="Images/20200105_154540.jpg" alt="Let's Make Art Project 1" width="400" height="520">
@@ -47,7 +70,7 @@
             <li><a href="https://www.amazon.com/15-Minute-Watercolor-Masterpieces-Create-Frame-Worthy-ebook/dp/B07LF64MT5">15-Minute Watercolor Masterpieces by Anna Koliadych</a></li>
             <li><a href="https://www.amazon.com/Modern-Watercolor-contemporary-exploration-watercolor/dp/1633223566#:~:text=Modern%20Watercolor%20provides%20a%20colorful,simple%20geometric%20shapes%20and%20patterns.">Modern Watercolor by Kristin Van Leuven</a></li>
         </ol>
-        <p>Here are some of the paintings inspired by the books:</p>
+        <p id="here">Here are some of the paintings inspired by the books:</p>
         <div class="row">
             <div class="column">
                 <img src="Images/20200315_194228.jpg" alt="Book Project 1" width="400" height="520">
@@ -61,7 +84,7 @@
         </div>
         <h3>Distance Learning</h3>
         <p>With quarantine, came a lot of free time. So I enrolled myself in an online course. It was recommended by the gal from Let's Make Art, so I knew it would be good. The course was through <a href="https://www.artsummits.com/">Art Summit.</a> The course offered several videos taught by artists who specialized in different watercolor techniques. This was extremely helpful and I completed some paintings I never thought possible! I definitely won't be giving these away!</p>
-        <p>Here are a few paintings from my class:</p>
+        <p id="here">Here are a few paintings from my class:</p>
         <div class="row">
             <div class="column">
                 <img src="Images/20200521_114824.jpg" alt="Art Summit 1" width="520" height="400">
@@ -75,24 +98,27 @@
         </div>
         <h3>My Niche</h3>
         <p>I had a friend purchase her first home and so I decided to paint it as a house warming gift! I really got into the intricate details of drawing it out, mixing colors and seeing it come to life. So of course I painted all of my family members homes!</p>
-        <p>Here are some homes I have painted:</p>
-        <div class="row">
-            <div class="column">
+        <p id="here">Here are some homes I have painted:</p>
+        <div class="rowTwo">
+            <div class="columnTwo">
                 <img src="Images/20200622_145348.jpg" alt="Homes 1" width="520" height="400">
             </div>
-            <div class="column">
+            <div class="columnTwo">
                 <img src="Images/20200622_145406.jpg" alt="Homes 2" width="520" height="400">
             </div>
-            <div class="column">
+        </div>
+        <div class="rowTwo">
+            <div class="columnTwo">
                 <img src="Images/20200622_145436.jpg" alt="Homes 3" width="520" height="400">
             </div>
-            <div class="column">
+            <div class="columnTwo">
                 <img src="Images/20200622_145503.jpg" alt="Homes 4" width="520" height="400">
             </div>
         </div>
-        <p>PS. I'm not great at trees!</p>
+        <p id="ps">PS. I'm not great at trees!</p>
         </article>
         <article>
+            <a name="whatYouNeed"></a>
         <h2>What You Need to Get your Paint On</h2>
         <p>There are a ton of watercolor supplies out there. Every video/class/book, has different recommendations. So here is what I've liked so far:</p>
         <h3>Brushes to Hold your Paint</h3>
@@ -108,19 +134,21 @@
             <li><a href="https://www.amazon.com/Winsor-Newton-Cotman-Colour-Painting/dp/B000PD3LYY/ref=sxin_9_ac_d_pm?ac_md=3-1-QmV0d2VlbiAkMjUgYW5kICQ0MA%3D%3D-ac_d_pm&cv_ct_cx=windsor+newton+watercolor&dchild=1&keywords=windsor+newton+watercolor&pd_rd_i=B000PD3LYY&pd_rd_r=a8320ec0-cd3f-4a93-9e63-935cc12978b4&pd_rd_w=IqPs8&pd_rd_wg=PBdRb&pf_rd_p=36deca3f-0240-4c64-a598-47f52c2ef1fb&pf_rd_r=203NPAJ8KC8Q54ZWH1XH&psc=1&qid=1615086438&sr=1-2-22d05c05-1231-4126-b7c4-3e7a9c0027d0">Winsor Newton Tubes</a></li>
         </ol>
         <h3>Paper to Absorb your Imagination</h3>
-        <p>You have two options when picking watercolor paper, cold press and hot press. Hot press is a much smoother paper so the water moves around a lot with this. I prefer cold press because the paper is rougher and tends to hold the water in place a little better. This all comes down to what your needs and preferences are. I'm a little particular so I appreciate the control that cold press gives me.</p>
+        <p id="noPaddingParagraph">You have two options when picking watercolor paper, cold press and hot press. Hot press is a much smoother paper so the water moves around a lot with this. I prefer cold press because the paper is rougher and tends to hold the water in place a little better. This all comes down to what your needs and preferences are. I'm a little particular so I appreciate the control that cold press gives me.</p>
         <p>As far as sizes go, it is all up to you and what you are wanting to paint. I like to have a wide variety. I also like having cheaper paper from Target or Amazon to practice on before commiting to using my expensive paper.</p>
         <ol>
             <li><a href="https://www.amazon.com/Handbook-Paper-Fluid-Watercolor-Pochette/dp/B00US4UTIQ/ref=sr_1_1?crid=2MPG01VX9ZUAI&dchild=1&keywords=fluid+100+watercolor+paper&qid=1615086490&s=arts-crafts&sprefix=Fluid+100%2Carts-crafts%2C193&sr=1-1">Fluid 100 Cold Press</a></li>
             <li><a href="https://www.amazon.com/Canson-Watercolor-Textured-Charcoal-Acrylic/dp/B00NQ49PLM/ref=sr_1_2?dchild=1&keywords=canson+watercolor+paper&qid=1615086528&s=arts-crafts&sr=1-2">Canson Cold Press</a></li>
         </ol>
+        <a name="parting"></a>
         <h2>Parting Words &#38; Wisdom</h2>
-        <p>I have been so lucky to have come across watercoloring and it couldn't have come at a better time. I can't wait to keep exploring and continue growing my own style.</p>
+        <p id="noPaddingParagraph">I have been so lucky to have come across watercoloring and it couldn't have come at a better time. I can't wait to keep exploring and continue growing my own style.</p>
         <p>Water is so unpredictable. Play with it and have some fun! There are so many resources out there. Use them!!!</p>
     </article>    
     </main>
         <footer>
-        <p>Author: S. Lohmar</p>
+            <a href="#toTop">Return to Top of Page</a>
+        <p id="noPaddingParagraph">Author: S. Lohmar</p>
         <p>2021</p>
     </footer>
     </body>
