Caps h2 and adjusted some spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <a name="toTop"></a>
-        <h1>Watercolor is my Therapy</h1>
+        <h1>Watercolor is My Therapy</h1>
         <nav>
             <ul>
                 <li>
@@ -31,14 +31,14 @@
         <main>
         <article>
             <a name="firstThings"></a>
-        <h2>First Things First</h2>
+        <h2>FIRST THINGS FIRST</h2>
         <p>I received a watercolor paint set for Christmas in 2019 from my Mother-in-Law. I had never used the medium before and my previous painting experience was Painting with a Twist. I felt bad leaving it unused, so I opened it up, pulled up a Youtube tutorial, and got to work. I absolutely loved it!</p>
         <figure>
             <img src="Images/20200105_164639.jpg" alt="My First Attempt!" width="520" height="400">
             <figcaption id="figureCaption">Not bad for my first try! These are hanging in my brother's home!</figcaption>
         </figure>
         <a name="branching"></a>
-        <h2>Branching Out</h2>
+        <h2>BRANCHING OUT</h2>
         <h3>Youtube for Good!</h3>
         <p>I typically avoid all things Youtube. If I don't, I get sucked in for hours and the next thing I know, I've watched 2 hours of makeup tutorials and 3 hours of kids meeting characters at Disney World. I quickly realized that when it came to watercolor, Youtube was going to be my friend. With something so hands on, it really did help to go step by step with someone else. My favorite channel is <a href="https://www.youtube.com/channel/UCzzCo7lZGJ-sTCgpI7BJKEg">Let's Make Art</a>. They put out a new project every week and even have a monthly subscription box that sends you all the supplies you'll need for that months projects. With that being said...</p>
         <h3>Let's Make Art Subscription Box</h3>
@@ -119,7 +119,7 @@
         </article>
         <article>
             <a name="whatYouNeed"></a>
-        <h2>What You Need to Get your Paint On</h2>
+        <h2>WHAT YOU NEED TO GET YOUR PAINT ON</h2>
         <p>There are a ton of watercolor supplies out there. Every video/class/book, has different recommendations. So here is what I've liked so far:</p>
         <h3>Brushes to Hold your Paint</h3>
         <p>I recommend rounds in sizes 2, 6, and 8. I have also found a large flat wash brush super useful when painting landscapes.</p>
@@ -141,15 +141,14 @@
             <li><a href="https://www.amazon.com/Canson-Watercolor-Textured-Charcoal-Acrylic/dp/B00NQ49PLM/ref=sr_1_2?dchild=1&keywords=canson+watercolor+paper&qid=1615086528&s=arts-crafts&sr=1-2">Canson Cold Press</a></li>
         </ol>
         <a name="parting"></a>
-        <h2>Parting Words &#38; Wisdom</h2>
+        <h2>PARTING WORDS &#38; WISDOM</h2>
         <p id="noPaddingParagraph">I have been so lucky to have come across watercoloring and it couldn't have come at a better time. I can't wait to keep exploring and continue growing my own style.</p>
-        <p>Water is so unpredictable. Play with it and have some fun! There are so many resources out there. Use them!!!</p>
+        <p> Water is so unpredictable. Play with it and have some fun! There are so many resources out there. Use them!!!</p>
     </article>    
     </main>
         <footer>
             <a href="#toTop">Return to Top of Page</a>
-        <p id="noPaddingParagraph">Author: S. Lohmar</p>
-        <p>2021</p>
+        <p id="noPaddingParagraph">Author: S. Lohmar <br> 2021</p>
     </footer>
     </body>
 </html>
